lucene-gosen Change Log

========== trunk / YYYY-MM-DD ===================================

New Features & Improvements

* http://code.google.com/p/lucene-gosen/issues/detail?id=9
  Reduced heap usage and object creation for better performance.
  (rmuir)

* add new dictype "naist-mecab". The NAIST-JDic for Mecab can be used.  (johtani)

========== 1.1.0 / 2011-06-12 ===================================

Important Notice

New Features & Improvements

* http://code.google.com/p/lucene-gosen/issues/detail?id=8
  Morphological data is lazy-loaded for better performance. Due to this,
  the part-of-speech tag is no longer put in TypeAttribute by the
  tokenizer, you should always access it with PartOfSpeechAttribute.
  (rmuir)

Bug Fixes

* http://code.google.com/p/lucene-gosen/issues/detail?id=7
  The compiled jar file didn't include resources (such as stopwords and
  stoptags) needed by JapaneseAnalyzer.  (rmuir)

API Changes

Javadoc Fixes

Others

========== 1.0.1 / 2011-05-13 ===================================

Important Notice

New Features & Improvements

Bug Fixes

* http://code.google.com/p/lucene-gosen/issues/detail?id=4
  JapaneseBasicFormFilter can throw NPE when it is used with WordDelimiterFilter.
  basicForm can be null when WDF creates a synonym term.
  (an anonymous user via koji)

* http://code.google.com/p/lucene-gosen/issues/detail?id=5
  Incorrect Highlighting. The tagger did not correctly accumulate buffer offsets
  and sentence offsets.
  (Shinichiro Abe via rmuir)

API Changes

Javadoc Fixes

Others

* add clean-sen target to dictionary/build.xml so that users, who want to compile
  custom dictionary, can delete *.sen files before compiling their dictionaries. (koji)


========== 1.0.0 / 2011-05-02 ===================================

Important Notice

* The first stable one is released.

New Features & Improvements

Bug Fixes

API Changes

Javadoc Fixes

Others

